--- a/cv/index.html
+++ b/cv/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#171B36">
+	<meta name="theme-color" content="#171B36">
 	<link rel="icon" type="image/x-icon" href="favicon.ico" />
 	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="assets/fontawesome/css/all.css" />
@@ -22,7 +22,7 @@
 			<li><i class="fas fa-map-marker-alt"></i>Lisbon, Portugal</li>
 			<li><i class="fa fa-envelope"></i><a target="_blank" href="mailto:joaocastropinheiro@gmail.com">joaocastropinheiro@gmail.com</a></li>
 			<li><i class="fas fa-phone"></i><a target="_blank" href="tel:+351968818031">+351 968 818 031</a></li>
-      <li><i class="fab fa-linkedin"></i><a target="_blank" href="https://www.linkedin.com/in/joaocastropinheiro">LinkedIn</a></li>
+			<li><i class="fab fa-linkedin"></i><a target="_blank" href="https://www.linkedin.com/in/joaocastropinheiro">LinkedIn</a></li>
 			<li><i class="fab fa-github"></i><a target="_blank" href="https://github.com/pineman">GitHub</a></li>
 			<li><i class="fa-brands fa-goodreads"></i><a target="_blank" href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=now-computer">Goodreads</a></li>
 			<li><i class="fas fa-globe"></i><a target="_blank" href="https://pineman.github.io">Website</a></li>
@@ -34,33 +34,33 @@
 		<h3>Interests</h3>
 			Go, Kotlin, Rust, Elixir. Distributed Systems, Concurrency, HA
 		<hr />
-    <h3>Projects</h3>
-      <a target="_blank" href="https://abra.fly.dev">abra</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <a target="_blank" href="https://gitlab.com/pineman/homepage">this website</a>
+		<h3>Projects</h3>
+			<a target="_blank" href="https://abra.fly.dev">abra</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <a target="_blank" href="https://gitlab.com/pineman/homepage">this website</a>
 	</side-wrap>
 	<version>
-		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: ed2123f
+		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: fa860aa
 	</version>
 </aside>
 
 <article>
-  <education>
+	<education>
 	<h2>Education</h2>
 	<gig>
 		<gig-header>
-		  <gig-img><img src="assets/ist.jpg"></gig-img>
-		  <gig-info>
-			  <h4><i class="fas fa-briefcase"></i>Student</h4>
-			  <h4><i class="fas fa-map-marker-alt fix"></i>Instituto Superior Técnico (IST)</h4>
-			  <h4><i class="fas fa-clock"></i>Sep. '15 to Jun. '19</h4>
-		  </gig-info>
+			<gig-img><img src="assets/ist.jpg"></gig-img>
+			<gig-info>
+				<h4><i class="fas fa-briefcase"></i>Student</h4>
+				<h4><i class="fas fa-map-marker-alt fix"></i>Instituto Superior Técnico (IST)</h4>
+				<h4><i class="fas fa-clock"></i>Sep. '15 to Jun. '19</h4>
+			</gig-info>
 		</gig-header>
 		<gig-description>
 			<p>Electrical and Computer Engineering.</p>
 		</gig-description>
 	</gig>
-  </education>
+	</education>
 	<hr />
-  <experience>
+	<experience>
 	<h2 id="experience">Experience</h2>
 	<gig>
 		<gig-header>
@@ -72,8 +72,9 @@
 			</gig-info>
 		</gig-header>
 		<gig-description>
-		  <p><b>Tech:</b> Java, JBoss, PostgreSQL, Bash, Docker, Gitlab CI, GCloud, K8s, Helm, Terraform, C++, JavaScript, React, Cypress, Asciidoc </p>
-			<p><a href='https://www.celfocus.com/home/index.php/offer/products/celfocus-one-net-mobile-office'>One Net</a> is Celfocus's enterprise voice solution, with 5 international deployments. The Call Handling Server (CHS) speaks both SS7 and SIP, in 185k SLOC of C++, has an in-memory DB and strict SLAs. It's provisioned via a web Portal, written in React and Java. It provides a JSON REST API and integrates with many external systems.</p><p>I started as a CHS dev and promptly shifted to Portal backend (rarely frontend), as I switched to a cross-functional agile team. I was fortunate enough to learn from the project's founding seniors, and emerged in a sort-of generalist Systems overview role later.</p><p>Currently, I do backend feature work, while being the main dev responsible for dev infra (CI w/ many test types), tooling and glue. I try to keep everyone productive and handle the rarer architectural issues. I spearheaded refactorings, migrations with external teams, new features, updates, new conventions across 4 teams, CI/CD for a new project, failover in production, and even onboarding. But most of all, at Celfocus I learned responsiblity, commitment and TDD.</p>
+			<p><b>Tech:</b> Java (JBoss, Spring), JavaScript (React), C++, PostgreSQL</p>
+			<p><b>Infra:</b> Docker, Bash, Gitlab CI (K8s on GCloud), Helm, Terraform</p>
+			<a href='https://www.celfocus.com/home/index.php/offer/products/celfocus-one-net-mobile-office'>One Net</a> is Celfocus's enterprise voice solution, with 5 international deployments. The Call Handling Server (CHS) speaks both SS7 and SIP, in 185k SLOC of C++, has an in-memory DB and strict SLAs. It's provisioned via a web Portal, written in React and Java. It provides a JSON REST API and integrates with many external systems.</p><p>I started as a CHS dev and promptly shifted to Portal backend (rarely frontend), as I switched to a cross-functional agile team. I was fortunate enough to learn from the project's founding seniors, and emerged in a sort-of generalist Systems overview role later.</p><p>Currently, I do backend feature work, while being the main dev responsible for dev infra (CI w/ many test types), tooling and glue. I try to keep everyone productive and handle the rarer architectural issues. I spearheaded refactorings, migrations with external teams, new features, updates, new conventions across 4 teams, CI/CD for a new project, failover in production, and even onboarding. But most of all, at Celfocus I learned responsiblity, commitment and TDD.</p>
 		</gig-description>
 	</gig>
 	<hr />
