--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
   <p>Here are some <a href="what-i-read.html">cool articles</a> I found on the web, and some <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=read-computer" target="_blank">books</a> I've read. Alas, there are many more things I'd like to read and do.</p>
   <h1 id="blog">Blog</h1>
   <ul>
-    <li>2022/12/03 - <a href="aoc3.html">AoC 2022: day 3,
+    <li>2023/05/07 - <a href="ruby-bug-shell-gem.html">I
+found a (microscopic) ruby bug and it got fixed in 3 hours</a></li>
+<li>2022/12/03 - <a href="aoc3.html">AoC 2022: day 3,
 profiling Go, existential crisis</a></li>
   </ul>
   <a href="https://www.eff.org/" class="img-link"><img src="https://www.eff.org/files/eff-join2_0.png" alt="Join EFF!" width="128px" height="128px"></a>
