--- a/what-i-read.html
+++ b/what-i-read.html
@@ -18,8 +18,8 @@
   <meta property="article:tag" content="software" />
   <meta property="article:tag" content="engineering" />
   <meta property="og:url" content="https://pineman.github.io/what-i-read.html" />
-  <meta property="article:published_time" content="20230602" />
-  <meta property="article:modified_time" content="20230602" />
+  <meta property="article:published_time" content="20230603" />
+  <meta property="article:modified_time" content="20230603" />
   <title>What I read</title>
   <meta property="og:title" content="What I read" />
   <meta name="description" content="What I read" />
@@ -30,9 +30,10 @@
 <a href="index.html">&lt; back</a>
 <article>
   <h1>What I read</h1>
-  <h6>last updated: 2023/06/02</h6>
+  <h6>last updated: 2023/06/03</h6>
   <h4>June 2023</h4>
 <ul>
+  <li><a href="https://web.archive.org/web/20110714074727/http://erlang.2086793.n4.nabble.com/Erlang-Web-Servers-challenge-td3643848.html">https://web.archive.org/web/20110714074727/http://erlang.2086793.n4.nabble.com/Erlang-Web-Servers-challenge-td3643848.html</a> </li>
   <li><a href="https://www.youtube.com/watch?v=LMe7hf2G1po">https://www.youtube.com/watch?v=LMe7hf2G1po</a> </li>
 </ul>
 <h4>May 2023</h4>
