--- a/what-i-read.html
+++ b/what-i-read.html
@@ -18,8 +18,8 @@
   <meta property="article:tag" content="software" />
   <meta property="article:tag" content="engineering" />
   <meta property="og:url" content="https://pineman.github.io/what-i-read.html" />
-  <meta property="article:published_time" content="20230628" />
-  <meta property="article:modified_time" content="20230628" />
+  <meta property="article:published_time" content="20230701" />
+  <meta property="article:modified_time" content="20230701" />
   <title>What I read</title>
   <meta property="og:title" content="What I read" />
   <meta name="description" content="What I read" />
@@ -30,9 +30,10 @@
 <a href="index.html">&lt; back</a>
 <article>
   <h1>What I read</h1>
-  <h6>last updated: 2023/06/28</h6>
+  <h6>last updated: 2023/07/01</h6>
 <h4>June 2023</h4>
 <ul>
+  <li><a href="https://www.paweldabrowski.com/articles/five-things-you-did-not-know-about-rails-transactions">https://www.paweldabrowski.com/articles/five-things-you-did-not-know-about-rails-transactions</a> </li>
   <li><a href="https://cohost.org/tef/post/1764930-how-not-to-write-a">https://cohost.org/tef/post/1764930-how-not-to-write-a</a> </li>
   <li><a href="https://www.bitecode.dev/p/hype-cycles">https://www.bitecode.dev/p/hype-cycles</a> </li>
   <li><a href="https://web.archive.org/web/20160416000938/https://circleci.com/blog/it-really-is-the-future/">https://web.archive.org/web/20160416000938/https://circleci.com/blog/it-really-is-the-future/</a> </li>
