--- a/what-i-read.html
+++ b/what-i-read.html
@@ -18,8 +18,8 @@
   <meta property="article:tag" content="software" />
   <meta property="article:tag" content="engineering" />
   <meta property="og:url" content="https://pineman.github.io/what-i-read.html" />
-  <meta property="article:published_time" content="20230715" />
-  <meta property="article:modified_time" content="20230715" />
+  <meta property="article:published_time" content="20230716" />
+  <meta property="article:modified_time" content="20230716" />
   <title>What I read</title>
   <meta property="og:title" content="What I read" />
   <meta name="description" content="What I read" />
@@ -30,9 +30,10 @@
 <a href="index.html">&lt; back</a>
 <article>
   <h1>What I read</h1>
-  <h6>last updated: 2023/07/15</h6>
+  <h6>last updated: 2023/07/16</h6>
 <h4>July 2023</h4>
 <ul>
+  <li><a href="https://www.youtube.com/watch?v=9ONm1od1QZo">https://www.youtube.com/watch?v=9ONm1od1QZo</a> universal search is now my favorite algorithm</li>
   <li><a href="https://www.youtube.com/watch?v=YX40hbAHx3s">https://www.youtube.com/watch?v=YX40hbAHx3s</a> </li>
   <li><a href="https://meetryanflowers.com/that-wont-work/">https://meetryanflowers.com/that-wont-work/</a> </li>
   <li><a href="https://cohost.org/tef/post/1794038-special-interest-inf">https://cohost.org/tef/post/1794038-special-interest-inf</a> </li>
